--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
             <artifactId>jsr305</artifactId>
             <version>3.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.processing</groupId>
+            <artifactId>net</artifactId>
+            <version>3.3.7</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
